# neural-networks

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  sandbox.ipynb
cnn/: profile_cnn.py  pytorch_cnn_mnist.ipynb  sandbox.ipynb  torchpy_cnn_mnist.ipynb
data/: __init__.py
mlp_batch_normalization/: numpy_mlp_batch_norm_mnist.ipynb  pytorch_mlp_batch_norm_mnist.ipynb  torchpy_mlp_batch_norm_mnist.ipynb  torchpy_mlp_batch_norm_mnist__multi_layer.ipynb
multilayer_perceptron/: numpy_mlp.ipynb  numpy_mlp_mnist.ipynb  python.ipynb  pytorch_mlp.ipynb  pytorch_mlp_mnist.ipynb  readme.md  torchcpp_mlp_mnist.cpp  torchpy_mlp_mnist.ipynb
torchcpp/: activations.cpp  activations.h  linear.cpp  linear.h  loss.cpp  loss.h  module.h  torchcpp.h  utils.cpp  utils.h
torchcpp_tests/: .clang-tidy  test_activations.cpp  test_helpers.h  test_linear  test_linear.cpp  test_loss.cpp  test_module  test_module.cpp  test_utils.cpp
torchpy/: __init__.py  architectures.py  engine.py  net.py
torchpy_tests/: test_architectures.py  test_net.py
